force-app/main/default/objects/custom_create234__c/custom_create234__c.object-meta.xml
<CustomObject>
    <label>Custom created object234</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects234</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>