force-app/main/default/objects/custom_create234__c/fields/custom_create_234field563__c.field-meta.xml
<CustomField>
    <fullName>custom_create_234field563__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 234field563</label>
    <type>Checkbox</type>
</CustomField>